<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newtodo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lists.NewToDoActivity">

    <Button
        android:id="@+id/buttonback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Back to ToDos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_time" />

    <EditText
        android:id="@+id/todoName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:hint="ToDo Name"
        android:inputType="textAutoComplete"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="Date"
        app:layout_constraintEnd_toStartOf="@+id/button_date"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todoName" />

    <Button
        android:id="@+id/button_date"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/input_date"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/input_date"
        android:layout_toRightOf="@+id/input_date"
        android:text="SELECT DATE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todoName" />

    <EditText
        android:id="@+id/input_time"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_below="@+id/input_date"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="Time"
        app:layout_constraintEnd_toStartOf="@+id/button_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_date" />

    <Button
        android:id="@+id/button_time"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_date"
        android:layout_alignStart="@+id/button_date"
        android:layout_alignLeft="@+id/button_date"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="SELECT TIME"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_date" />

    <Button
        android:id="@+id/create_new_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Create ToDo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_time" />


</androidx.constraintlayout.widget.ConstraintLayout>